// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterDetailsModal render landscape 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "rgb(175, 224, 209)",
            "borderRadius": 20,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": "70%",
          },
          Object {
            "flex": 0.6,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        test
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "test",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "borderRadius": 20,
              "flex": 0.5,
              "marginRight": 15,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "height": 170,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Status:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Gender:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Origin:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Created:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CharacterDetailsModal render portrait 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "rgb(175, 224, 209)",
            "borderRadius": 20,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": "91%",
          },
          Object {
            "height": "68%",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 10,
            "textAlign": "center",
          }
        }
      >
        test
      </Text>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "test",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "borderRadius": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "height": 170,
              "justifyContent": "space-between",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Status:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Gender:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Origin:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                  "marginRight": 20,
                }
              }
            >
              Created:
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              test
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
